--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,4 +16,4 @@ jobs:
         python-version: 3.11  # Spécifiez la version de Python dont vous avez besoin
 
     - name: Exécuter les tests
-      run: python -m unittest discover -s code -p 'test_*.py'
+      run: python -m unittest Human_test.py
